--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,23 @@
+
+/* 공용 */
+
 body{
     overflow-x: hidden;
 }
+
+.standby{
+    opacity: 0;
+    transform: translate3d(50px, 0px, 0);
+}
+.moving{
+    transform: translate3d(0, 0, 0) !important;
+    opacity: 1;
+    transition: 1s;
+}
+
+/* 공용 */
+
+/* 헤더 & 모달 */
 header{
     display: flex;
     width: 100%;
@@ -9,30 +26,41 @@ header{
     justify-content: space-between;
     padding: 16 16px;
     box-sizing: border-box;
+    transition: 0.5s;
+    
 }
 
-.not-transparent{
-    background-color: white;
+header.not-transparent{
+    background-color:  #ffffff80;
     border-bottom: 1px;
     border-color: black;
-    opacity: 70%;
     transition: 0.5s;
 }
 
 .opacity-zero{
+    transform: translateY(-100%);
     opacity: 0;
 }
-.blue{
-    fill: #0BB8FF;
-}
+
 #socar-logo{
     width:112px;
     padding: 16px 32px;
 }
 
+header>a{
+    z-index: 1;
+}
+.blue-logo{
+    content: url("/img/logo-blue.svg");
+}
+
+.blue-patty{
+    background-color: #0BB8FF !important;
+}
 #hamberger{
     width: 40px;
     height: 25px;
+    z-index: 1;
 }
 
 .patty{
@@ -42,38 +70,149 @@ header{
     height: 3px;
     background-color: white;
     position: relative;
-    top:10%;
-    right: 40%;
+    top:5%;
+    transition: 0.5s;
 }
 
 .patty:last-child{
-    top:50%;
-    right: 15%;
+    top:40%;
+    right: -20%;
 }
 
+.trnsform-to-x1{
+    top: 40%;
+    right: -35%;
+    transform: translate(-50%, -50%) rotate(-405deg);
+}
+.trnsform-to-x2{
+    top: 30% !important;
+    right: -35% !important;
+    transform: translate(-50%, -50%) rotate(405deg);
+}
+.hamberger-modal {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 120vh;
+    background-color: #000000CC;
+    display: flex;
+    justify-content: flex-end;
+    overflow-x:hidden;
+}
+
+.hide{
+    opacity: 0;
+    transition: 0.5s;   
+}
+.deephide{
+    z-index: -10;
+}
+.hamberger-modal.hide>nav {
+    transform: translateX(100%);
+}
+
+.ham-modal-menu-container{
+    width: 30%;
+    height: 100vh;
+    background-color: #28323C;
+    padding: 0 32px;
+    box-sizing: border-box;
+    transition: 0.5s;
+    transition-delay: 0.5;
+    position: relative;
+}
+
+.ham-modal-menu-list {
+    border-bottom: solid 1px #3b4a55;
+    padding: 16px 0;
+    display: block;
+    left: 4%;
+}
+
+.ham-modal-menu {
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.ham-modal-menu>a:hover{
+    color:#0BB8FF;
+    transition: 0.3s;
+}
+.ham-modal-menu>a {
+    color: #eee;
+    display: block;
+    padding: 16px 0;
+    text-decoration: none;
+}
+/* 헤더 & 모달 */
+
+/* 인트로 섹션 */
+
 #intro-section{
+    top: 0;
+    left: 0;
     background: url(/img/main_visual_fullscreen.jpg);
     width: 100%;
     height: 100vh;
+    min-width: 100%;
+    min-height: 100%;
+    max-height: 1080px;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 0;
+    margin-bottom: 70px;
+    background-size: cover; 
+    background-repeat: no-repeat;
+    background-position: 20% 10%;
 }
+
 
 h1{
     font-size: 64px;
     color:white;
     text-align: center;
 }
+
+/* 인트로 섹션 */
+
+/* 몸통 섹션 */
+
+article{
+    font-size: 28pt;
+    font-weight:700;
+    color: #aaa;
+    margin-bottom: 50px;
+    display: block;
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+    z-index: -20;
+}
+
 article img{
     position: relative;
     width: 100%;
     height: auto;
+    z-index: -20;
 }
 
-article>h2::after{
-    content: "" ;
+h2{
+    font-size: 30pt;
+    letter-spacing: -0.025em;
+    font-weight: normal;
+    line-height: 1.3;
+    margin-bottom: 16px;
+    display: inline-block;
+    color: #374553;
+    margin-bottom: 20px;
+    word-break: keep-all;
+    font-family: "AvenirLTPro-Heavy", 'sdg-m', sans-serif;
+    position: relative;
+}
+
+.afterh2{
+    content: "after";
     display: block;
     position: absolute;
     right: -16px;
@@ -83,6 +222,56 @@ article>h2::after{
     width:10px;
     height: 10px;
 }
+
+p{
+    font-size: 14pt;
+    letter-spacing: -0.025em;
+    line-height: 1.5;
+    margin-bottom: 50px;
+}
+
+/* 몸통 섹션 */
+
+
+/* 카운트 섹션 */
+
+#counter{
+    background-color: #F7F8F9;
+    width: 100%;
+    height: 300px;
+    padding: 60px 60px;
+    text-align: center;
+    font-size: 28pt;
+    color:#aaa;
+    line-height: 1.5;
+    font-weight: normal;
+    margin-top: 130px;
+    position: relative;
+    justify-content: center;
+    }
+#counter>span{
+    color: #0BB8FF;
+    font-size: 29pt;
+    font-weight: bolder;
+}
+#blue-rect{
+    position: absolute;
+    width: 100%;
+    left: 70%;
+    bottom: -1px;
+    height: 100%;
+    background: rgba(0,184,255,1);
+    transform: skewX(-30deg) translate3d(30%, 0, 0);
+    transform-origin: bottom left;
+    overflow: hidden;
+}
+
+#blue-rect.moving{
+    transform: skewX(-30deg) translate3d(0, 0, 0) !important;
+}
+
+/* 카운트 섹션 */
+
 
 #copyright{
     display: flex;
@@ -100,52 +289,15 @@ article>h2::after{
 	top: 50%;
 	left: 50%;
 }
-#intro{
-    display: flex;
-    align-content: center;
-    position: relative;
-    margin-bottom: 70px;
-}
-#intro-img{
-    width: 100%;    
-    height: 100%;
-	vertical-align: middle;
-}
 
-p{
-    font-size: 14pt;
-    letter-spacing: -0.025em;
-    line-height: 1.5;
-    margin-bottom: 50px;
 
-}
-article{
-    font-size: 28pt;
-    font-weight:700;
-    color: #aaa;
-    margin-bottom: 50px;
-    display: block;
-    width: 50%;
-    margin-left: auto;
-    margin-right: auto;
 
-}
 
-h3{
-    font-size: 40px;
-    font-weight: normal;
-    color: #374553;
-    margin-bottom: 20px;
-}
 
-#suggest{
-    text-align: center;
-    font-size: 28pt;
-    color:#aaa;
-    line-height: 1.5;
-    font-weight: normal;
-    font-family: "socarfont", 'sdg-m', sans-serif;
-}
+
+
+/* 예전에 만들던 푸터 */
+
 
 footer{
     background-color: #28323C;
