--- a/css/index.css
+++ b/css/index.css
@@ -10,7 +10,7 @@ body{
     transform: translate3d(50px, 0px, 0);
 }
 .moving{
-    transform: translate3d(0, 0, 0) !important;
+    transform: translate3d(0, 0, 0);
     opacity: 1;
     transition: 1s;
 }
@@ -27,7 +27,7 @@ header{
     padding: 16 16px;
     box-sizing: border-box;
     transition: 0.5s;
-    
+    z-index: 1000;
 }
 
 header.not-transparent{
@@ -45,13 +45,18 @@ header.not-transparent{
 #socar-logo{
     width:112px;
     padding: 16px 32px;
+    position: relative;
+    z-index: 1000;
 }
+
 
 header>a{
     z-index: 1;
 }
 .blue-logo{
     content: url("/img/logo-blue.svg");
+    position: relative;
+    z-index: 1000000000;
 }
 
 .blue-patty{
@@ -60,7 +65,8 @@ header>a{
 #hamberger{
     width: 40px;
     height: 25px;
-    z-index: 1;
+    z-index: 100;
+    position: relative;
 }
 
 .patty{
@@ -99,6 +105,7 @@ header>a{
     display: flex;
     justify-content: flex-end;
     overflow-x:hidden;
+    z-index:80;
 }
 
 .hide{
@@ -238,8 +245,8 @@ p{
 #counter{
     background-color: #F7F8F9;
     width: 100%;
-    height: 300px;
-    padding: 60px 60px;
+    height: 480px;
+    padding-top: 120px;
     text-align: center;
     font-size: 28pt;
     color:#aaa;
@@ -248,7 +255,10 @@ p{
     margin-top: 130px;
     position: relative;
     justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
     }
+
 #counter>span{
     color: #0BB8FF;
     font-size: 29pt;
