--- a/css/index.css
+++ b/css/index.css
@@ -4,6 +4,21 @@
 body{
     overflow-x: hidden;
 }
+ul{
+    display: flex;
+}
+
+li{
+    list-style: none;
+}
+
+a{
+    text-decoration-line: none;
+    text-decoration-style: none;
+    color: #C5C8CE;
+    letter-spacing: 0;
+    word-spacing: 0;
+}
 
 .standby{
     opacity: 0;
@@ -27,7 +42,6 @@ header{
     padding: 16 16px;
     box-sizing: border-box;
     transition: 0.5s;
-    z-index: 1000;
 }
 
 header.not-transparent{
@@ -45,18 +59,15 @@ header.not-transparent{
 #socar-logo{
     width:112px;
     padding: 16px 32px;
-    position: relative;
-    z-index: 1000;
 }
 
 
 header>a{
-    z-index: 1;
+    position: relative;
+    z-index: 1000;
 }
 .blue-logo{
     content: url("/img/logo-blue.svg");
-    position: relative;
-    z-index: 1000000000;
 }
 
 .blue-patty{
@@ -105,7 +116,7 @@ header>a{
     display: flex;
     justify-content: flex-end;
     overflow-x:hidden;
-    z-index:80;
+    z-index:30;
 }
 
 .hide{
@@ -194,6 +205,7 @@ article{
     width: 50%;
     margin-left: auto;
     margin-right: auto;
+    position: relative;
     z-index: -20;
 }
 
@@ -230,7 +242,7 @@ h2{
     height: 10px;
 }
 
-p{
+article p{
     font-size: 14pt;
     letter-spacing: -0.025em;
     line-height: 1.5;
@@ -257,6 +269,7 @@ p{
     justify-content: center;
     align-items: center;
     box-sizing: border-box;
+    z-index: -1;
     }
 
 #counter>span{
@@ -264,7 +277,7 @@ p{
     font-size: 29pt;
     font-weight: bolder;
 }
-#blue-rect{
+#blue-rect{ 
     position: absolute;
     width: 100%;
     left: 70%;
@@ -300,68 +313,118 @@ p{
 	left: 50%;
 }
 
-
-
-
-
-
-
 /* 예전에 만들던 푸터 */
 
 
 footer{
     background-color: #28323C;
     width: 100%;
-    padding: 40px 18px 100px;
+    padding: 32px 16px;
     overflow: auto;
     color:#646F7C; 
     font-size: 10pt;
-    margin:0 auto; text-align:center;
+    word-break: break-all;
+    text-align:center;
+    padding-bottom: 100px;
 }
-
-li{
-    list-style: none;
-}
-footer p{
-    font-size: 10pt;
-    margin-bottom: 0px;
+#footer-container {
+    max-width: 800px;
+    margin: 0 auto;
 }
 .sns-list{
+    margin: auto;
+    gap: 12px;
     display: flex;
-    justify-content: left;
-    margin-bottom: 16px;
-}
-
-nav ul{
-    display: table;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 8px;
     font-size: 12pt;
 }
 
-nav ul li{
-    padding-right: 25px;
-}
-a{
-    text-decoration-line: none;
-    text-decoration-style: none;
+#no-one-watch-this{
+    margin-bottom: 16px;
+    display: flex;
+    justify-content: space-between;
+    gap: 3px;
+    font-size: 12pt;
     color: #C5C8CE;
-    letter-spacing: 0;
-    word-spacing: 0;
 }
-ul strong{
+footer b{
     color: white;
 }
-.footer-bottom{
-    text-align: center;
+
+#info-container{
+    display: flex;
+    justify-content: space-between;
 }
-.company-information{
-    display: inline-block;
+#cop-info{
+   display: flex;
+   flex-direction: column;
 }
-dt, dd{
-    display: inline;
+
+dl{
+    display: flex;
+    width: 100%;
 }
-.copyright p{
-    display: inline;
+
+dt::after{
+    content: '.';
+    margin-right: 8px;
+}
+
+#info{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+footer a{
+    position: relative;
+    z-index:0;
+}
+#info a{
+    text-decoration: underline;
+}
+
+.absolute-zero{
+    z-index: -1;
+    opacity: 1;    
+}
+
+
+#app-download-sticker{
+    right: 0;
+    bottom: 0;
+    position: fixed;
+    width: 340px;
+    height: 90px;
+    opacity: 1;
+    overflow: hidden;
+    background-color: transparent;
+}
+
+#app-downloader-container{
+    position: absolute;
+    width: 100%;
+    bottom: -1px;
+    height: 100%;
+    background: rgba(0,184,255,1);
+    transform: skewX(-30deg) translate3d(0, 0, 0);
+    transform-origin: bottom left;
+    overflow: hidden;
+}
+
+#app-downloader-container>h3{
+    position: absolute;
+    top: 31px;
+    right: 80px;
+    color: white;
+    font-weight: bolder;
+    transform:skewX(30deg);
+}
+
+#app-download-sticker img{
+    position: absolute;
+    top: 14px;
+    right: 270px;
+    width: 60px;
+    height: 60px;
+    border-radius: 20%;
 }
